; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-fade-to-color.c_fade_to_color_video_render.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-fade-to-color.c_fade_to_color_video_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fade_to_color_info = type { i32 }

@fade_to_color_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @fade_to_color_video_render to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fade_to_color_video_render(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.fade_to_color_info*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.fade_to_color_info*
  store %struct.fade_to_color_info* %7, %struct.fade_to_color_info** %5, align 8
  %8 = load %struct.fade_to_color_info*, %struct.fade_to_color_info** %5, align 8
  %9 = getelementptr inbounds %struct.fade_to_color_info, %struct.fade_to_color_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @fade_to_color_callback, align 4
  %12 = call i32 @obs_transition_video_render(i32 %10, i32 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @UNUSED_PARAMETER(i32* %13)
  ret void
}

declare dso_local i32 @obs_transition_video_render(i32, i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
